Trim the Clap features a bitflags
I see little need for the `color` and `suggestions` features of Clap, not for
this simple tool. As such, disable the default Clap features, and only include
what we need.

This decreases the binary size a little.

Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ serialport = "4.2.0"
 
 [dependencies.clap]
 version = "3.2.17"
-features = ["derive", "env"]
+default_features = false
+features = ["std", "derive", "env"]
