--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "focus-send"
 version = "0.1.0-snapshot"
 edition = "2021"
 
-[dependencies]
-serialport = "4.2.0"
+[dependencies.serialport]
+version = "4.2.0"
+default_features = false
 
 [dependencies.clap]
 version = "3.2.17"
