--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "focus-send"
 version = "0.1.0-snapshot"
 description = "A bare-bones Focus testing tool"
+categories = ["command-line-utilities", "hardware-support"]
 license = "GPL-3.0-only"
 edition = "2021"
 
