--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ default_features = false
 version = "3.2.17"
 default_features = false
 features = ["std", "derive", "env"]
+
+[profile.release]
+strip = true
