ci: Use cargo fmt instead of rustfmt directly
Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,6 @@ steps:
     commands:
       - rustup component add clippy rustfmt
       - cargo clippy
-      - rustfmt --check src/*.rs
+      - cargo fmt --check
       - cargo build -r
       - cargo test
