--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ description = "A bare-bones Focus testing tool"
 categories = ["command-line-utilities", "hardware-support"]
 license = "GPL-3.0-only"
 edition = "2021"
+rust-version = "1.59.0"
 
 [dependencies.serialport]
 version = "4.2.0"
