--- a/.github/workflows/focus-send.yml
+++ b/.github/workflows/focus-send.yml
@@ -14,6 +14,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev
+
       - name: Clippy
         run: cargo clippy
 
