--- a/.github/workflows/focus-send.yml
+++ b/.github/workflows/focus-send.yml
@@ -71,7 +71,15 @@ jobs:
         with:
           command: test
 
-      - name: Build
+      - name: Build (Linux)
+        if: runner.os == 'Linux'
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --target=x86_64-unknown-linux-musl
+
+      - name: Build (macOS/Windows)
+        if: runner.os != 'Linux'
         uses: actions-rs/cargo@v1
         with:
           command: build
@@ -80,7 +88,7 @@ jobs:
       - name: Prepare compressed binary (Linux)
         if: runner.os == 'Linux'
         run: |
-          xz -c target/release/focus-send \
+          xz -c target/x86_64-*-musl/release/focus-send \
                 > target/release/focus-send.linux_amd64.xz
 
       - name: Prepare compressed binary (macOS)
