Migrate to clap 4.0.0-rc.2
In anticipation of the upcoming clap 4 release, migrate to its release candidate.

Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ rust-version = "1.59.0"
 version = "4.2.0"
 
 [dependencies.clap]
-version = "3.2.17"
+version = "4.0.0-rc.2"
 default_features = false
-features = ["std", "derive", "env"]
+features = ["std", "derive", "env", "help", "usage"]
 
 [profile.release]
 strip = true
