Delay between sending arguments, and display a progress bar
To work around a bug in the Model 100 firmware, add a small delay between
sending arguments. To make the user experience smoother, display a progress bar
by default if we have arguments to send. The bar can be hidden by using the new
`--quiet/-q` option.

Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ license = "GPL-3.0-only"
 edition = "2021"
 rust-version = "1.59.0"
 
+[dependencies.indicatif]
+version = "0.17.1"
+
 [dependencies.serialport]
 version = "4.2.0"
 
