Enable the `build-binary` feature by default
Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ features = ["std", "derive", "env", "help", "usage"]
 optional = true
 
 [features]
+default = ["build-binary"]
 build-binary = ["indicatif", "clap"]
 
 [[bin]]
