--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ version = "0.17.1"
 optional = true
 
 [dependencies.clap]
-version = "4.0.0-rc.3"
+version = "4.0.9"
 default_features = false
 features = ["std", "derive", "env", "help", "usage"]
 optional = true
