CI: Merge the Build steps
There's no need to separate build steps. We had them separate to build for musl
on Linux, but we don't do that anymore, and if we'll do it again, we'll do it in
Cargo.toml.

Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/.github/workflows/focus-send.yml
+++ b/.github/workflows/focus-send.yml
@@ -71,15 +71,7 @@ jobs:
         with:
           command: test
 
-      - name: Build (Linux)
-        if: runner.os == 'Linux'
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release
-
-      - name: Build (macOS/Windows)
-        if: runner.os != 'Linux'
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
           command: build
