CI: Fix the version tag discovery
Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/.github/workflows/focus-send.yml
+++ b/.github/workflows/focus-send.yml
@@ -116,7 +116,7 @@ jobs:
 
       - name: Discover the version tag
         id: version
-        run: echo ::set-output name=version::$(cargo pkgid | cut -d# -f2)
+        run: echo ::set-output name=version::$(cargo pkgid | cut -d@ -f2)
 
       - name: Download artifacts
         uses: actions/download-artifact@v2
