--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,15 @@ serialport = "4.2.0"
 version = "0.17.1"
 optional = true
 
+[dependencies.serde_json]
+version = "1.0"
+optional = true
+
+[dependencies.serde]
+version = "1.0"
+optional = true
+features = ["derive"]
+
 [dependencies.clap]
 version = "4.0.9"
 default_features = false
@@ -22,7 +31,7 @@ optional = true
 
 [features]
 default = ["build-binary"]
-build-binary = ["indicatif", "clap"]
+build-binary = ["indicatif", "clap", "serde", "serde_json"]
 
 [[bin]]
 name = "focus"
