--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -36,6 +36,17 @@ jobs:
           command: fmt
           args: --check
 
+      - name: Documentation check
+        uses: actions-rs/cargo@v1
+        with:
+          command: doc
+
+      - name: Documentation compile check
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --doc
+
   build:
     runs-on: ${{ matrix.os }}
 
