--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -16,36 +16,25 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install the rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          components: clippy, rustfmt
+        run: |
+          rustup toolchain install stable
+          rustup default stable
+          rustup component add clippy rustfmt
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y libudev-dev
 
       - name: Clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
+        run: cargo clippy
 
       - name: Format check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --check
+        run: cargo fmt --check
 
       - name: Documentation check
-        uses: actions-rs/cargo@v1
-        with:
-          command: doc
+        run: cargo doc
 
       - name: Documentation compile check
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --doc
+        run: cargo test --doc
 
   build:
     runs-on: ${{ matrix.os }}
@@ -60,33 +49,25 @@ jobs:
 
       - name: Install Rust (Linux)
         if: runner.os == 'Linux'
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          target: x86_64-unknown-linux-musl
+        run: |
+          rustup toolchain install stable
+          rustup default stable
 
       - name: Install Rust (macOS/Windows)
         if: runner.os != 'Linux'
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
+        run: |
+          rustup toolchain install stable
+          rustup default stable
 
       - name: Install dependencies
         if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y libudev-dev
 
       - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+        run: cargo test
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release
+        run: cargo build --release
 
       - name: Prepare compressed binary (Linux)
         if: runner.os == 'Linux'
@@ -154,6 +135,7 @@ jobs:
           gh release create -p -t "kaleidoscope-focus.rs ${VERSION}" \
                             -n "Development snapshot." \
                             v${VERSION}
+          sleep 5s
 
       - name: Upload artifacts to the release
         env:
