--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*"
 
 env:
   CARGO_TERM_COLOR: always
@@ -111,11 +113,20 @@ jobs:
         with:
           path: artifacts
 
-      - name: Release
+      - name: Snapshot release
+        if: github.ref_type == 'branch'
         uses: anton-yurchenko/git-release@v5
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           UNRELEASED: "update"
           RELEASE_NAME_SUFFIX: " (snapshot build)"
+        with:
+          args: artifacts/*/*.xz
+
+      - name: Release
+        if: github.ref_type == 'tag'
+        uses: anton-yurchenko/git-release@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           args: artifacts/*/*.xz
