Cargo.toml: Make cargo upgrade happy
Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ features = ["derive"]
 
 [dependencies.clap]
 version = "4.0"
-default_features = false
+default-features = false
 features = ["std", "derive", "env", "help", "usage"]
 optional = true
 
