Cargo: Don't build binaries by default
Default to not building binaries, but do build them in CI.

Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ features = ["std", "derive", "env", "help", "usage"]
 optional = true
 
 [features]
-default = ["build-binary"]
+default = []
 build-binary = ["indicatif", "clap", "serde", "serde_json"]
 
 [[bin]]
