--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -27,16 +27,16 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libudev-dev
 
       - name: Clippy
-        run: cargo clippy
+        run: cargo clippy -F build-binary
 
       - name: Format check
         run: cargo fmt --check
 
       - name: Documentation check
-        run: cargo doc
+        run: cargo doc -F build-binary
 
       - name: Documentation compile check
-        run: cargo test --doc
+        run: cargo test --doc -F build-binary
 
   build:
     runs-on: ${{ matrix.os }}
@@ -66,10 +66,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libudev-dev
 
       - name: Test
-        run: cargo test
+        run: cargo test -F build-binary
 
       - name: Build
-        run: cargo build --release
+        run: cargo build --release -F build-binary
 
       - name: Prepare compressed binary (Linux)
         if: runner.os == 'Linux'
