--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ exclude = [
 [dependencies]
 serialport = "4.2"
 
+[dependencies.anyhow]
+version = "1.0"
+optional = true
+
 [dependencies.indicatif]
 version = "0.17.1"
 optional = true
@@ -36,7 +40,7 @@ optional = true
 
 [features]
 default = []
-build-binary = ["indicatif", "clap", "serde", "serde_json"]
+build-binary = ["indicatif", "clap", "serde", "serde_json", "anyhow"]
 
 [[bin]]
 name = "focus"
