ci(lint): Don't check the docs of dependencies
Signed-off-by: Gergely Nagy <algernon@keyboard.io>

--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -33,7 +33,7 @@ jobs:
         run: cargo fmt --check
 
       - name: Documentation check
-        run: cargo doc
+        run: cargo doc --no-deps
 
   build:
     runs-on: ${{ matrix.os }}
