--- a/kaleidoscope-focus/Cargo.toml
+++ b/kaleidoscope-focus/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kaleidoscope-focus"
-version = "0.1.0"
+version = "0.1.1-snapshot"
 description = "A library to talk with Kaleidoscope-powered devices using the Focus protocol"
 categories = ["hardware-support"]
 license = "GPL-3.0-only"
